--- a/Index.Rmd
+++ b/Index.Rmd
@@ -120,9 +120,9 @@ association_df$OutcomeGroup <- factor(
 
 ```{r plot_grouped}
 # Bubble plot with grouped x-axis
-ggplot(association_df, aes(x = OutcomeGroup, y = PracticeGroup, size = Count, fill = Count)) +
+association_plot <- ggplot(association_df, aes(x = OutcomeGroup, y = PracticeGroup, size = Count, fill = Count)) +
   geom_point(shape = 21, color = "black", alpha = 0.7) +
-  scale_fill_gradient(low = "white", high = "blue", name = "Count") +
+  scale_fill_gradient(low = "white", high = "green", name = "Count") +
   scale_size_continuous(name = "Count", range = c(2, 10)) +
   labs(
     title = "Associations Between Forest Practices and Outcomes",
@@ -136,6 +136,10 @@ ggplot(association_df, aes(x = OutcomeGroup, y = PracticeGroup, size = Count, fi
     panel.grid.minor = element_blank()
   ) +
   facet_grid(~ OutcomeCategory, scales = "free_x", space = "free")
+
+association_plot
+
+ggsave(filename = "figures/association_plot.png", plot = association_plot, width = 5, height = 5, bg = "white")
 ```
 
 
