--- a/Index.Rmd
+++ b/Index.Rmd
@@ -11,16 +11,16 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
 
 Assess associations between tree management practices and outcomes. Start with term frequency data and bibliographic entries. 
 
-```{r assess_refs}
+```{r assess_refs, warning = FALSE, message=FALSE}
 library(NLP)
 source("functions/create_corpus.R")
 ```
 
-There were 188 returns in the Scopus search of Title, Abstract and Keywords: `( "ethnoforest*" OR "traditional ecological knowledge" ) + ( "tree" OR "forest" OR "agroforestry" OR "silviculture" ) + ( "effect" OR "development" OR "improvement" OR "potential" ) + ( "management" OR "use" )`. 
+There were 7,876 returns in the Scopus search of Title, Abstract and Keywords: `( "agroforestry" OR "silviculture" OR "conservation forest" OR "community forest" ) + ( "effect" OR "development" OR "improvement" OR "potential" ) + ( "management" )`. 
 
-Compiling and remove duplicates in Zotero for a total of `r length(corpus)` papers in search. Use these to create a Term-Document Matrix (TDM). 
+Compiling and remove duplicates and erroneous returns for a total of `r length(corpus)` papers in search. Use these to create a Term-Document Matrix (TDM). 
 
-```{r create_tdm}
+```{r create_tdm, warning = FALSE, message=FALSE}
 #TDM
 tdm <- TermDocumentMatrix(corpus)
 
@@ -28,7 +28,7 @@ tdm <- TermDocumentMatrix(corpus)
 tdm_matrix <- as.matrix(tdm)
 
 # Save the TDM matrix to a file
-write.csv(tdm_matrix, "data/term_document_matrix.csv", row.names = TRUE)
+# write.csv(tdm_matrix, "data/term_document_matrix.csv", row.names = TRUE) # large data
 ```
 
 Create an inspection process for frequently occurring terms. 
@@ -43,14 +43,13 @@ head(term_freq_sorted, 50)
 
 Create an overview of the associations between tree management and relevant outcomes from the references. 
 
-```{r define_practices_outcomes}
+```{r define_practices_outcomes, warning = FALSE, message=FALSE}
 source("functions/make_association_dataframe.R")
 
 # Save the associations to a CSV file
-write.csv(association_df, "forest_practice_outcome_associations.csv", row.names = FALSE)
+# write.csv(association_df, "data/forest_practice_outcome_associations.csv", row.names = FALSE) # very large data
 ```
 
-A total of `r sum(association_df$Count)` references had some mention of the relevant associations. 
 
 Create an overview the keywords of the outcomes in the reference search. 
 
@@ -63,7 +62,7 @@ print(keyword_check)
 ```
 Overiew the results of the outcomes in the reference search. 
 
-```{r check_outcomes}
+```{r check_outcomes, warning = FALSE, message=FALSE}
 outcome_check <- sapply(outcomes, function(outcome) {
   sum(grepl(outcome, text_data, ignore.case = TRUE))
 })
@@ -71,7 +70,7 @@ print(outcome_check)
 ```
 Ready the reference data for a plot of associations. 
 
-```{r arrange_plot_associations}
+```{r arrange_plot_associations, warning = FALSE, message=FALSE}
 library(ggplot2)
 library(stringr)
 
@@ -86,7 +85,7 @@ association_df$OutcomeGroup <- str_to_title(association_df$OutcomeGroup) # Conve
 
 Create an `OutcomeGroup` and check that the values match categories. 
 
-```{r group_outcomes}
+```{r group_outcomes, warning = FALSE, message=FALSE}
 # Define the outcome categories
 human_development_outcomes <- c("Economic", "Livelihoods", "Nutrition")
 biodiversity_outcomes <- c("Carbon", "Biodiversity", "Ecosystem Services")
@@ -122,9 +121,8 @@ association_df$OutcomeGroup <- factor(
 
 ```{r plot_grouped}
 # Bubble plot with grouped x-axis
-association_plot <- ggplot(association_df, aes(x = OutcomeGroup, y = PracticeGroup, size = Count, fill = Count)) +
-  geom_point(shape = 21, color = "black", alpha = 0.7) +
-  scale_fill_gradient(low = "white", high = "green", name = "Count") +
+association_plot <- ggplot(association_df, aes(x = OutcomeGroup, y = PracticeGroup, size = Count)) +
+  geom_point(shape = 21, color = "black", alpha = 0.7) + 
   scale_size_continuous(name = "Count", range = c(2, 10)) +
   labs(
     title = "Associations Between Forest Practices and Outcomes",
