--- a/Index.Rmd
+++ b/Index.Rmd
@@ -38,6 +38,7 @@ corpus <- corpus %>%
   tm_map(removePunctuation) %>%
   tm_map(removeNumbers) %>%
   tm_map(removeWords, stopwords("en")) %>%
+  # stemming to reduce words to their base / root form
   tm_map(stemDocument) %>%  # Add stemming
   tm_map(stripWhitespace)
 
@@ -83,7 +84,7 @@ head(term_freq_sorted, 50)
 Create an overview of the associations between tree management and relevant outcomes from the references. 
 
 ```{r define_practices_outcomes, warning = FALSE, message=FALSE}
-# source("functions/make_association_dataframe.R") # deprecated
+# source("functions/make_association_dataframe.R") 
 source("functions/workflow_for_each_paper.R")
 # takes a while to run
 ```
